# template-engine

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE-REVIEW.md  CONTRIBUTING.md  README.md  README.pt.md  REAL-WORLD-LIMITS.md  ROADMAP.md  SECURITY-MODEL.md  SECURITY.md  TESTING-PLAN.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: contributing.md  contributing.pt.md  index.md  index.pt.md  quickstart.md  quickstart.pt.md
docs/assets/stylesheets/: extra.css
docs/concepts/: architecture.md  architecture.pt.md  pipeline.md  pipeline.pt.md  preset.md  preset.pt.md  render-ops.md  render-ops.pt.md  section_mapper.md  section_mapper.pt.md  visual-validation.md  visual-validation.pt.md
docs/providers/: index.md  index.pt.md
docs/superpowers/plans/: 2026-04-28-master-roadmap.md  2026-04-28-schema-driven-table-fill.md
examples/: 01_quickstart.py  02_custom_provider.py  03_validation.py  04_ascii_layout_poc.py  05_ascii_layout_synthetic.py  06_multipage_poc.py  07_replication_poc.py  08_technical_report.py  09_multipage_contract.py  10_styled_brand_doc.py  11_creative_design.py  12_minimalist_design.py  13_official_form.py  14_pattern_inference.py
scripts/: build_adversarial_fixtures.py  build_real_world_source.py  build_vendor_b_fixtures.py  run_adversarial_llm.py  run_real_world_llm.py
site/: 404.html  index.html  sitemap.xml
site/quickstart/: index.html
site/search/: search_index.json
src/engine/: __init__.py  ascii_layout.py  batch.py  cli.py  confidence.py  extractor.py  hybrid_mapper.py  llm_mapper.py  pattern_inference.py  preset_creator.py  preset_loader.py  preset_schemas.py  renderer.py  schema_inference.py  semantic_diff.py  validator.py  visual_validator.py
src/engine/conformity/: __init__.py  aggregator.py  design.py  report.py  structural.py  technical.py  text.py  visual.py
src/engine/formats/: __init__.py  _base.py  abnt_artigo.py  abnt_referencia.py  abnt_relatorio_tecnico.py  abnt_tcc.py  ata_reuniao.py  contrato_simples.py  laudo_nr12.py  nr13.py  nr35.py  procuracao_simples.py
src/engine/llm/: __init__.py  _schema.py  _utils.py  anthropic_provider.py  base.py  gemini_free.py  gemini_vision.py  groq_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  router.py
src/engine/render_ops/: __init__.py  header.py  migration.py  sections.py
src/engine/section_mapper/: __init__.py  auto_mapper.py  auto_renderer.py  auto_tables.py  header_filler.py  numbering.py  orchestrator.py  parser.py  plan_cache.py  record_aligner.py  record_extractor.py  renderer.py  similarity.py  slot_filler.py  slot_profiler.py  slot_renderer.py  slot_reviewer.py  slots.py  source_profiler.py  table_filler.py  template_profiler.py  template_renderer.py  typed_fill.py
src/engine/section_mapper/schemas/: __init__.py  builtins.py  detector.py  detector_vision.py  types.py
src/engine/security/: __init__.py  audit.py  injection.py  local_only.py  pii.py
tests/: test_ascii_layout.py  test_batch.py  test_conformity.py  test_extractor.py  test_formats.py  test_golden.py  test_hybrid_mapper.py  test_llm_gemini.py  test_llm_mapper.py  test_llm_utils.py  test_pattern_inference.py  test_preset_creator.py  test_preset_loader.py  test_record_aligner.py  test_record_extractor.py  test_renderer.py  test_router.py  test_schema_inference.py  test_schemas.py  test_schemas_vision.py  test_section_mapper.py  test_security.py  test_semantic_diff.py  test_slot_profiler.py  test_slot_reviewer.py  test_typed_fill.py  test_validator.py  test_visual_validator.py
tests/fixtures/: fonte_sample.docx  gold_sample_01.docx  gold_sample_02.docx  template_sample.docx
tests/fixtures/sample_preset/: manifest.json  pattern.md  render_ops.yaml  schema.json  template.docx
tests/fixtures/sample_preset/gold/: gold-01.docx
tests/golden/: unifap_canned_records.json  unifap_expected.json
tests/real_world/: pop_corentoc.docx  pop_unifap.docx  source_corentoc.docx  source_unifap.docx
tests/vendor_b/: source.docx  template.docx
tests/vendor_c/: source.docx  template.docx
tests/vendor_d/: source.docx  template.docx
tests/vendor_e/: source.docx  template.docx
