[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-engine"
version = "0.2.1"
description = "Document normalization engine: learn a template from examples and convert any document automatically via LLM."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "luizhcrs", email = "luizhcrs@gmail.com"}]
keywords = ["llm", "rag", "nlp", "document-processing", "docx", "pdf", "template", "normalization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.9,<3",
    "python-docx>=1.1,<2",
    "pdfplumber>=0.11,<0.12",
    "pyyaml>=6.0,<7",
    "structlog>=24.1,<26",
    "typer>=0.12,<1",
    "rich>=13.7,<15",
]

[project.scripts]
template-engine = "engine.cli:app"

[project.optional-dependencies]
gemini = ["google-generativeai>=0.8,<0.9"]
openai = ["openai>=1.50,<2"]
anthropic = ["anthropic>=0.40,<1"]
groq = ["groq>=0.13,<1"]
ollama = ["httpx>=0.27,<1"]
openrouter = ["openai>=1.50,<2"]
visual = [
    "pdf2image>=1.17,<2",
    "pillow>=10.4,<12",
]
all = [
    "google-generativeai>=0.8,<0.9",
    "openai>=1.50,<2",
    "anthropic>=0.40,<1",
    "groq>=0.13,<1",
    "httpx>=0.27,<1",
    "pdf2image>=1.17,<2",
    "pillow>=10.4,<12",
]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6",
    "google-generativeai>=0.8,<0.9",
    "openai>=1.50,<2",
    "anthropic>=0.40,<1",
    "groq>=0.13,<1",
    "httpx>=0.27,<1",
    "pdf2image>=1.17,<2",
    "pillow>=10.4,<12",
]

[project.urls]
Homepage = "https://github.com/Luizhcrs/template-engine"
Repository = "https://github.com/Luizhcrs/template-engine"
Issues = "https://github.com/Luizhcrs/template-engine/issues"
Changelog = "https://github.com/Luizhcrs/template-engine/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
engine = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",          # pyflakes
    "I",          # isort
    "B",          # bugbear
    "UP",         # pyupgrade
    "SIM",        # simplify
    "C4",         # comprehensions
    "RET",        # return
    "TCH",        # type-checking
    "PTH",        # use pathlib
    "RUF",        # ruff-specific
]
ignore = [
    "E501",       # line length handled by formatter
    "B008",       # function call as default arg (Pydantic Field needs)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]   # asserts ok em tests
"examples/**/*.py" = ["E402"] # late imports ok em examples

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false  # noqa-style suppressions vary per Python/mypy version
check_untyped_defs = true
no_implicit_reexport = true
mypy_path = "src"
packages = ["engine"]
exclude = ["tests/", "build/", "examples/"]
# Strict mode coming in v0.3 — alpha 0.x focuses on shipping correctness over typing perfection.

[[tool.mypy.overrides]]
module = [
    "docx.*",
    "pdfplumber.*",
    "yaml.*",
    "google.*",
    "openai.*",
    "anthropic.*",
    "groq.*",
    "structlog.*",
    "httpx.*",
]
ignore_missing_imports = true
disable_error_code = ["no-any-return", "attr-defined", "assignment"]

[tool.coverage.run]
source = ["engine"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
